echo-server/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: echo
  namespace: default
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server
          ports:
            - name: http
              containerPort: 80
